@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-17T08:06:48Z",
+  "timestamp" : "2023-09-18T16:07:14Z",
   "count_outdated" : 274,
   "uniques_outdated" : 88,
-  "count" : 280,
-  "uniques" : 93,
+  "count" : 281,
+  "uniques" : 94,
   "views" : [
     {
       "timestamp": "2023-09-07T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2023-09-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
