@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 7,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2023-09-07T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2023-09-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
